Se implementa el backend json server

--- a/06-heroesApp/src/index.html
+++ b/06-heroesApp/src/index.html
@@ -15,3 +15,7 @@
   <app-root></app-root>
 </body>
 </html>
+
+<!-- npm install --save-dev
+  el --save-dev es para guardar solo en desarrollo y no en produccion
+ -->
